# external-rh-frpc

./: .gitignore  README.md  eslint.config.cjs  package.json  pyproject.toml  tsconfig-cjs-alias.json  tsconfig-common.json  tsconfig-esm-alias.json  tsconfig.json
src/python/rh_frpc/: __init__.py  rpc.py
src/ts/: index.ts  rpc.ts
