[tool.poetry]
name = "rh-frpc"
version = "0.1.0"
description = ""
authors = ["ramblehead <v.rybynok@gmail.com>"]
readme = "README.md"
packages = [{ include = "rh_frpc", from = "src/python" }]

[tool.poetry.dependencies]
python = "3.11.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
